Fixed browser specific issues.
Added warning to IE users since CARM does not run as fast and looks ugly in IE.

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -53,9 +53,18 @@ input:-moz-placeholder, select:-moz-placeholder, textarea:-moz-placeholder {
 /* NAVIGATION MENU */
 
 .breadcrumbs {
+    display: block;
+    float: left;
     font-size: 0.9em;
     margin: -5px 0 20px 0;
     padding: 0 1em;
+}
+
+.breadcrumbs li {
+    display: block;
+    float: left;
+    list-style: none;
+    padding-left: 3px;
 }
 
 .breadcrumbs *, .breadcrumbs a:hover {
@@ -207,7 +216,7 @@ div.sectionHeader {
     border-bottom: 1px solid #CACACA;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 10px rgba(0, 0, 0, 0.1);
     height: 22px;
-    margin: 1em -10px;
+    margin: 1em -5px;
     padding: 0.8em 0.8em 1em 0.8em;
 }
 
